adds case study page

--- a/app/assets/stylesheets/_common.css.scss
+++ b/app/assets/stylesheets/_common.css.scss
@@ -16,6 +16,11 @@ $dark-blue: #004264;
 $white: #FFF;
 $black: #000;
 
+
+$steel-gray: #455560;
+$text-grey: #929292;
+$grey-white: #f6f6f6;
+
 @mixin pt-sans {
   font-family: 'PT Sans', sans-serif;
 }
