--- a/app/assets/stylesheets/case_study.css.scss
+++ b/app/assets/stylesheets/case_study.css.scss
@@ -44,7 +44,7 @@
 }
 
 #logo-versions {
-	background-color: #FCFCFC;
+	background-color: #FFFFFF;
 	height: 850px;
 	padding-top: 50px;
 	text-align: center;
