adds arrow icon

--- a/app/views/home/case_study.html.haml
+++ b/app/views/home/case_study.html.haml
@@ -16,7 +16,7 @@
 		%h4 CloseoutBike Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorum Ipsum has been the industry's standard dummy text since the 1950s.
 		#selectors
 		#logo-options
-		%br
+		#arrow-down
 		#selected-logo
 %div#project-design
 	.row
