--- a/app/assets/stylesheets/case_study.css.scss
+++ b/app/assets/stylesheets/case_study.css.scss
@@ -83,9 +83,20 @@
 
 }
 
+#arrow-down {
+	background: image-url("arrow-down.png") no-repeat;
+	margin-top: 40px;
+	height: 56px;
+	width: 40px;
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+
+}
+
 #selected-logo {
 	background: image-url("closeoutbike_selected_logo.png") no-repeat;
-	margin-top: 100px;
+	margin-top: 60px;
 	height: 220px;
 	width: 440px;
 	display: block;
@@ -120,6 +131,12 @@
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
+
+	border-radius: 13px;
+	-moz-box-shadow: 0 0 5px #888;
+	-webkit-box-shadow: 0 0 5px#888;
+	box-shadow: 0 0 5px #888;
 }
+
 
 
