--- a/app/assets/stylesheets/case_study.css.scss
+++ b/app/assets/stylesheets/case_study.css.scss
@@ -105,8 +105,8 @@
 }
 
 #project-design {
-	background-color: #FCFCFC;
-	height: 1100px;
+	background-color: #FFFFFF;
+	height: 1180px;
 	padding-top: 50px;
 	text-align: center;
 	border-bottom: 1px solid #e9e9e9;
@@ -126,17 +126,15 @@
 #design-image {
 	background: image-url("closeoutbike_design.png") no-repeat;
 	margin-top: 50px;
-	height: 650px;
+	height: 700px;
 	width: 800px;
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
+	margin-bottom: 40px;
 
 	border-radius: 13px;
-	-moz-box-shadow: 0 0 5px #888;
-	-webkit-box-shadow: 0 0 5px#888;
-	box-shadow: 0 0 5px #888;
+	-moz-box-shadow: 0 0 30px #888;
+	-webkit-box-shadow: 0 0 30px #888;
+	box-shadow: 0 0 30px #DDD;
 }
-
-
-
