--- a/app/assets/stylesheets/layouts.css.scss
+++ b/app/assets/stylesheets/layouts.css.scss
@@ -182,8 +182,8 @@ div.dialog {
   height: 110px;
   width: 100%;
   background: #FFFFFF;
-  border-bottom: 1px solid #e9e9e9;
   padding-bottom: 12px;
+  opacity: .98;
   z-index: 10;
   position: fixed;
   margin-top: -110px;
