--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,7 +1,7 @@
 %div#mission-statement
   .row
-    %h1 Execution is easy, when you have the right partners.
-    %h2 You have an idea, and we have the skills to build it. We will sweat the technical details so you can focus on what your users need most. Let's build something together.
+    %h1 We take the stress out of web and mobile development.
+    %h2 Execution is easy, when you have the right partners.  We’ll handle the technical details so you can focus on what your business needs most.  Let’s build something together.
 
 %div#first-project
   .row
@@ -29,7 +29,7 @@
       %h1#third-project-logo
     #third-project-description.column.two
       %h3 Gigdog
-      %h4 Why guess when you can test? Use our expertise to validate (or destroy) assumptions, making your site stronger along the way
+      %h4 Why guess when you can test? Use our expertise to validate (or destroy) assumptions, making your site stronger along the way.
       = link_to case_study_path, :class => "a-case-study-button blue" do
         View case study
 
