--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -1,7 +1,7 @@
 %div#site-links
   .row
-    %h1 You want to see more?
-    %h2 Well you can check out our #{link_to "portfolio page", projects_path}. You can get to know us #{link_to "here", about_path}. Read our thoughts along #{link_to "the Journey", blog_posts_path} and find our about possible new #{link_to "open positions", jobs_path} on our team.
+    %h1 Want to start the conversation?
+    %h2 Contact us #{link_to "here", contact_path}, or #{link_to "get to know us", about_path}. You can read our thoughts along #{link_to "the journey", blog_posts_path} or look at our #{link_to "portfolio page", projects_path}. Want to join the team? Check for #{link_to "open positions", jobs_path}.
   .row
     #heart-icon
 
