--- a/app/views/home/about.html.haml
+++ b/app/views/home/about.html.haml
@@ -1,14 +1,14 @@
 %div#about-header
   .row
     %h1 Applications are built for people, and so are we.
-    %h2 We take the stress out of building web and mobile applications by blowing up the black box. Watching your idea develop into a valuable application should be rewarding and informative, not daunting, and our methodologies make you an integral part of the process.
+    %h2 Watching your idea develop into a valuable application should be fun, not daunting. Our approach makes you an integral part of the process while improving your tech along the way.
 %div#principles
   .row
     .column.four
       #circle-white
       #tech-craft-icon
       %h5 Technical craft
-      %h6 We have the tools, and we know how to use them. We build powerfully simple software
+      %h6 Our team has all the tools and the experience to know how to use them effectively
     .column.four
       #circle-white
       #creative-icon
@@ -18,12 +18,12 @@
       #circle-white
       #user-centered-icon
       %h5 User-centered development
-      %h6 You know your customers, and we know how people use technology
+      %h6 We build powerfully simple software by focusing on users and their needs
 
 %div#expertise
   #expertise-text.row
-    %h3 Cross-Disciplinary Digital Expertise
-    %h4 We combine a design-oriented approach with technical and commercial expertise and strategic decision-making. We've got years of experience in everything involved with planning, designing, building and shipping digital products. We know our stuff.
+    %h3 Digital Expertise
+    %h4 We have managed every facet of development from ideation to launch and use our experience to solve problems before they arise.  Our design-oriented approach ensures your software will feel like home to your users, whether you have one or one million.
 
 %div#services
   .row
@@ -31,7 +31,7 @@
       #icon-text-row
         #web-app-icon
         %h5 Web Applications
-      %h6 Do you have an idea that will make or save money? If your product is your business then let's build an application that meets your needs, perfectly.
+      %h6 If your business is on the web then we can help build it or make it better. We have done it all, but will spare you the jargon.
     .column.four
       #icon-text-row
         #mobile-app-icon
@@ -47,12 +47,12 @@
       #icon-text-row
         #testing-icon
         %h5 Testing
-      %h6 Stories are nice, but learning through data is what strokes our geek. We track, analyze and learn as we build simply perfect software
+      %h6 Stories are nice, but learning through data is what strokes our geek. We track, analyze and learn as we build simply perfect software.
     .column.four
       #icon-text-row
         #lean-tactics-icon
         %h5 Lean Tactics
-      %h6 Why guess when you can know? Lean tactics ensure we build the right application, every time, by adapting to new information gleaned through testing.
+      %h6 Lean tactics ensure we build the right application, every time, by adapting to new information gleaned through user interactions.
     .column.four
       #icon-text-row
         #agile-methodologies-icon
@@ -63,7 +63,7 @@
   .row
     #team-header
       %h3 Meet Your Team
-      %h4 We're a purposefully small, highly driven team that takes pride in our work - each one of us brings something unique to the table. 
+      %h4 We're a purposefully small, highly driven team that takes pride in our work - each one of us brings something unique to your project. 
   .row#team-row
     - @coshx_folks[0..5].each do |person, a|
       .column.two
@@ -77,8 +77,8 @@
     #circle-white
     #down-triangle  
   .row#work-header
-    %h3 How We Work
-    %h4 Our working process is highly iterative and built specifically for agile and responsive digital development. That means tight collaboration, streamlined projects, and better results.
+    %h3 Our Approach
+    %h4 Our process is highly iterative and focused on the needs of your business, not ours. Technology exists for the people who will use (and pay for) it, and we never forget that.
   .row#step-even
     .column.one
     .column.four
@@ -86,12 +86,12 @@
       #meet-icon
     .column.eight
       %h5 Pleased to Meet You
-      %h4 Our vision matters most, and we want to learn about it while getting to know you and your business needs. We are not faceless mercenaries, but a talented team of superheroes that wants to help our clients succeed. Let’s make sure we are the right fit before taking this journey together.
+      %h4 Your vision matters most, and we want to learn about it while getting to know you and your business needs. We are not faceless mercenaries, but a talented team of superheroes that wants to help our clients succeed.
   .row#step-odd
     .column.two
     .column.six
       %h5 Planning Session
-      %h4 Your idea is the center of this energetic process, where we will sketch your application before writing one line of code. Furious whiteboarding and challenged ideas will generate a set of user stories, which are your entire application in written form. We will use these to prioritize your needs, estimate your cost and get cracking on the code.
+      %h4 Furious whiteboarding and challenged ideas will lead to a sketch of your idea while generating a set of user stories, which are your entire application in written form. We will use these to prioritize your needs, estimate your cost and get cracking on the code.
     .column.four
       #circle-off-white
       #planning-icon
@@ -102,12 +102,12 @@
       #design-icon
     .column.eight
       %h5 Design
-      %h4 Design is where form and function meet. Tools are only as powerful as one’s ability to use them, and we will work together to design intuitive, powerfully simple applications. Our designers are artists, and our developers are craftsmen. Your software will look as good as it feels, solving problems along the way.
+      %h4 Design is where form and function meet. Tools are only as powerful as one’s ability to use them, and we will work together to design intuitive, powerfully simple applications. Our designers are artists, and our developers are craftsmen. Your software will look as good as it feels.  
   .row#step-odd
     .column.two
     .column.six
       %h5 Minimum Viable Product
-      %h4 Everything comes together in your Minimum Viable Product. We will get this into the hands of users in order to learn from their interactions and the data they generate. This saves you money by taking the guesswork out of development. We will crunch the numbers and sweat the technical details so you can focus on the fun stuff.
+      %h4 Everything comes together in your Minimum Viable Product. We will get this into the hands of users in order to learn from their interactions and the data they generate. This saves you money by taking the guesswork out of development. We will crunch the numbers and sweat the technical details to keep you on the path to profitability. 
     .column.four
       #circle-off-white
       #mvp-icon
@@ -118,4 +118,4 @@
       #iterate-icon
     .column.eight
       %h5 Iterate
-      %h4 You have users, revenue and an appetite for more. Lessons learned will be turned into improved functionality and a better, stronger application, capturing more users along the way. Perhaps you are ready to hire your own tech team, and we will proudly hand you off like parents at the first day of school…but you will always have a room in our house.
+      %h4 You have users, revenue and an appetite for more. Lessons learned will be turned into improved functionality and a better, stronger application, capturing more users along the way. Perhaps you are ready to hire your own tech team, and we will proudly hand you off like parents at the first day of school…but you will always have a room in our home.
