--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -1,8 +1,7 @@
-=provide(:title, " | #{@post.title.mb_chars.capitalize.to_s}".html_safe)
-=provide(:description, @post.body.mb_chars.to_s.html_safe)
+#show-post
+	.row
+		=provide(:title, " | #{@post.title.mb_chars.capitalize.to_s}".html_safe)
+		=provide(:description, @post.body.mb_chars.to_s.html_safe)
 
 %section.primary.wall-of-text
-  = render :partial => "one_post", :locals => {:post => @post, :preview => false }
-
-  %section#comments
-    = render :partial => "comments"
+	= render :partial => "one_post", :locals => {:post => @post, :preview => false }
