--- a/app/assets/stylesheets/_common.css.scss
+++ b/app/assets/stylesheets/_common.css.scss
@@ -20,6 +20,7 @@ $black: #000;
 $steel-gray: #455560;
 $text-grey: #929292;
 $grey-white: #f6f6f6;
+$dark-grey: #535353;
 
 @mixin pt-sans {
   font-family: 'PT Sans', sans-serif;
