adds js for header scroll opacity

--- a/app/assets/stylesheets/layouts.css.scss
+++ b/app/assets/stylesheets/layouts.css.scss
@@ -179,8 +179,8 @@ div.dialog {
   height: 109px;
   width: 100%;
   background: #FFFFFF;
+  opacity: 1;
   padding-bottom: 12px;
-  opacity: .98;
   z-index: 10;
   position: fixed;
   margin-top: -109px;
