--- a/app/assets/stylesheets/layouts.css.scss
+++ b/app/assets/stylesheets/layouts.css.scss
@@ -17,8 +17,7 @@ h2 {
 }
 
 #content {
-  margin-top: 109px;
-  border-top: 1px solid #e3e1df;
+  margin-top: 110px;
   width: 100%;
 }
 
@@ -176,14 +175,18 @@ div.dialog {
 }
 
 #header {
-  height: 109px;
+  height: 110px;
   width: 100%;
   background: #FFFFFF;
   opacity: 1;
   padding-bottom: 12px;
   z-index: 10;
   position: fixed;
-  margin-top: -109px;
+  margin-top: -110px;
+
+  -moz-box-shadow: 0 0 6px #E0E0E0;
+  -webkit-box-shadow: 0 0 6px #E0E0E0;
+  box-shadow: 0 0 6px #E0E0E0;
 }
 
 #header-content {
