--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -49,7 +49,7 @@
     font-size: 24px;
     font-family: "Merriweather", serif;
     line-height: 36px;
-    color: $black;
+    color: #535353;
     font-weight: regular;
 
     a {
@@ -101,6 +101,24 @@
 
 }
 
+#more-by-author {
+  height: 180px;
+  padding-top: 55px;
+  width: 833px;
+  margin-left: auto;
+  margin-right: auto;
+
+  .column.two {
+    width: 80px;
+  }
+
+  .column.ten {
+    float: left;
+    padding-left: 30px;
+    padding-top: 10px;
+  }
+}
+
 #post-text {
   width: 833px;
   margin-left: auto;
@@ -125,6 +143,26 @@
   color: white;
   background: $blue;
   font-weight: bold;
+}
+
+#pages {
+  height: 60px;
+  margin-top: 40px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 833px;
+
+}
+
+nav span {
+  padding-right: 5px;
+  font-family: "Merriweather Sans", sans-serif;
+  font-size: 24px;
+  text-transform: uppercase;
+  font-weight: bold;
+  a {
+      color: #38A8CC;
+  }
 }
 
 
