--- a/app/views/posts/_one_post.html.haml
+++ b/app/views/posts/_one_post.html.haml
@@ -10,8 +10,10 @@
 				= post.created_at.strftime("%B %d, %Y")
 			.post-content
 				=post.body_html.html_safe
-
-
-
-
-
+	.row#more-by-author
+		.column.two
+			%a{:href => about_path, :class => 'about-us-avatar'}(style="background:url(#{Gravatar.new(post.author.email).image_url(:size => 80)});")
+		.column.ten
+			%h2 
+				More posts by 
+				= link_to post.author.name, post.author.url
