--- a/app/assets/stylesheets/layouts.css.scss
+++ b/app/assets/stylesheets/layouts.css.scss
@@ -518,6 +518,8 @@ code {
 
 .btn.blue {
   background-color: #38A8CC;
+  font-family: "Merriweather Sans", sans-serif;
+  font-size: 16px;
   width: 300px;
   height: 60px;
 }
