--- a/app/views/home/contact_us.html.haml
+++ b/app/views/home/contact_us.html.haml
@@ -1,26 +1,12 @@
-= ceditable "contact page title", "h1", :class => "centre"
-= ceditable "contact page text", "p", :class => "graytext centre"
-
-.short-white-line
-
-%dl.tabs.message-tabs
-  %dd.active.left-tab
-    %a{:href => "#request"}
-      %h5 REQUEST A QUOTE
-      %p I need help building something awesome
-  %dd.right-tab
-    %a{:href => "#contact"}
-      %h5 CONTACT US
-      %p Just saying "Hi!"
-
-="</div></div>".html_safe
-.container.bluu
+#contact-header
   .row
-    %ul.tabs-content
-      %li.active#quoteTab
-        =render :partial => "messages/quote"
-      %li#contactTab
-        =render :partial => "messages/contact"
+    %h1 Let's get down to business.
+#contact-body
+  .row
+    %h3 Interested in hiring us?
+    %h4 There are no secrets to success. It is the result of preparation, hard work, and learning from failure.
+    #contactTab
+      =render :partial => "messages/contact"
 
 ="<div class='container'><div class='row with_maps'>".html_safe
 
