adds google map on about page

--- a/app/views/home/_maps.html.haml
+++ b/app/views/home/_maps.html.haml
@@ -1,28 +1,1 @@
-.row
-  .six.columns
-    %h5.capsLock Charlottesville
-    %p.graytext Our castle in Virginia
-    %a{:target => '_blank', :href => "https://maps.google.com/maps?q=1110+Market+Street+East+Suite+N7,+Charlottesville,+VA+22902&hl=en&sll=37.269174,-119.306607&sspn=10.276355,19.753418&hnear=1110+Market+St+E,+Charlottesville,+Virginia+22902&t=m&z=16"}
-      =image_tag("map_left.png")
-    %p.graytext 1110 Market Street East Suite N7, Charlottesville, VA 22902
-
-  .six.columns
-    %h5.capsLock Boulder
-    %p.graytext Our temple in Colorado
-    %a{:target => '_blank', :href => "https://maps.google.com/maps?q=3080+Valmont+Road+suite+280,+Boulder,+CO+80301&hl=en&ll=40.019201,-105.218468&spn=0.154601,0.308647&sll=37.405074,-82.617187&sspn=20.479689,39.506836&hnear=3080+Valmont+Rd+%23280,+Boulder,+Colorado+80301&t=m&z=12"}
-      =image_tag("map_right.png")
-    %p.graytext 3080 Valmont Road suite 280, Boulder, CO 80301
-.row
-  .six.columns
-    %h5.capsLock San Francisco
-    %p.graytext Our residence in California
-    %a{:target => '_blank', :href => "https://maps.google.com/maps?q=972+mission+street&ie=UTF-8&hq=&hnear=0x808580843dfd203b:0x7a8e975abf04adee,972+Mission+St,+San+Francisco,+CA+94103&gl=us&ei=xTFmUMrcN4joigKG2oCgAw&ved=0CCAQ8gEwAA"}
-      =image_tag("map_sf.png")
-    %p.graytext 972 Mission Street, 5th Floor, San Francisco, CA 94103
-
-  .six.columns
-    %h5.capsLock Austin
-    %p.graytext Our saloon in Texas
-    %a{:target => '_blank', :href => "https://maps.google.com/maps?q=701+Brazos+Street+Suite+1601+Austin+TX&hl=en&ll=30.268278,-97.737937&spn=0.013881,0.027401&sll=40.02931,-105.239977&sspn=0.196903,0.438423&hnear=701+Brazos+St+%231601,+Austin,+Travis,+Texas+78701&t=m&z=16"}
-      =image_tag("map_austin.png")
-    %p.graytext 701 Brazos Street, Suite 1601, Austin, TX 78701
+#map-canvas
