--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -6,12 +6,13 @@
     .row
       #heart-icon
 
-  %article#together
-    #heroes.row
-      .column.eight
-        %h3 We are a distributed team of superheroes.
-      #work-together.column.four
-        = button_to "let's work together", contact_path(:anchor => "request"), :class => "btn blue center top-margin-small", :method => :get
+  - unless current_page?('/contact')
+    %article#together
+      #heroes.row
+        .column.eight
+          %h3 We are a distributed team of superheroes.
+        #work-together.column.four
+          = button_to "let's work together", contact_path(:anchor => "request"), :class => "btn blue center top-margin-small", :method => :get
 %footer.container
   .row
     #footer-logo.column.three
@@ -53,3 +54,5 @@
       %br
       #facebook-icon
         %a{:href => "http://www.facebook.com/coshxlabs"}
+
+#map-canvas
