--- a/app/assets/stylesheets/contact_us.css.scss
+++ b/app/assets/stylesheets/contact_us.css.scss
@@ -13,6 +13,8 @@
 #contact-body {
 	background-color: white;
 	padding-top: 50px;
+	border-bottom: 1px solid #e9e9e9;
+
 	.row {
 		width: 833px;
 		margin-left: auto;
@@ -60,4 +62,9 @@
 		padding-top: 5px;
 
 	}
+}
+
+#map-canvas {
+	height: 550px;
+	background-color: white;
 }
