--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -4,6 +4,7 @@
     %title= "Coshx Labs #{yield(:title)}"
     %meta{:name => "google-site-verification", :content => "GG9HzTQhQZszRRYo-W_el_Dh1LQs-3SQOuCzZS88FvI"}
     %meta{:charset => "UTF-8"}
+    %script{:src => "http://maps.googleapis.com/maps/api/js?sensor=false"}
     = render "shared/fonts"
     = stylesheet_link_tag "application"
     = javascript_include_tag "application"
