color fixes on about page

--- a/app/assets/stylesheets/about.css.scss.erb
+++ b/app/assets/stylesheets/about.css.scss.erb
@@ -20,7 +20,7 @@
   }
   h5 {
     margin-top: 25px;
-    color: black;
+    color: #535353;
   }
   h6 {
     margin-left: 10px;
@@ -76,7 +76,7 @@
   border-bottom: 1px solid #e9e9e9;
   h3 {
     margin-top: 0px;
-    color: black;
+    color: #535353;
   }
   h4 {
     margin-top: 20px;
@@ -96,7 +96,7 @@
     padding-right: 15px;
   }
   h5 {
-    color: black;
+    color: #535353;
   }
 }
 
@@ -160,7 +160,7 @@
   height: 780px;
 
   h3 {
-    color: black;
+    color: #535353;
   }
   h4 {
     color: $text-grey;
@@ -207,7 +207,7 @@
   height: 1850px;
   border-bottom: 1px solid #e9e9e9;
   h3 {
-    color: black;
+    color: #535353;
   }
   h4 {
     margin-top: 20px;
